chaos-mesh-tests/kcat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kcat
spec:
  containers:
  - name: cp-kcat
    image: confluentinc/cp-kcat:7.9.1
    command: ['sh', '-c', 'tail -f /dev/null']
    volumeMounts:
      - name: kcat-configs
        mountPath: /mnt/configs
  volumes:
    - name: kcat-configs
      configMap:
        defaultMode: 420
        name: kcat-config
