chaos-mesh-tests/chaosmesh-dashboard-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chaos-dashboard
  namespace: chaos-mesh
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chaos.k8s.internal.schmitzi.net`)
      services:
        - name: chaos-dashboard
          port: 2333
